--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ header {
   position: static;
   background-color: #febb8e;
   margin: 0;
-  padding: 0;
 }
 
 li {
@@ -39,11 +38,12 @@ li {
   transition: transform 0.3s;
   transform-origin: top left;
   margin: 0;
+  padding: 2.5em;
 }
 
 a {
   font-family: "Yanone Kaffeesatz", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   text-decoration: none;
   font-weight: 700;
   color: #ffffff;
@@ -55,6 +55,8 @@ a {
   display: inline-block;
   color: white;
   cursor: pointer;
+  font-size: 2.5rem;
+  padding-left: 0.2em;
 }
 
 .hidden {
@@ -103,7 +105,7 @@ footer {
   }
 
   a {
-    font-size: 3rem;
+    font-size: 2.6rem;
     padding: 1em;
   }
 }
