--- a/style.css
+++ b/style.css
@@ -35,10 +35,12 @@ li {
 }
 
 #menu {
+  display: flex;
   transition: transform 0.3s;
   transform-origin: top left;
   margin: 0;
   padding: 2.5em;
+  justify-content: flex-start;
 }
 
 a {
@@ -46,14 +48,15 @@ a {
   font-size: 1.7rem;
   text-decoration: none;
   font-weight: 700;
-  color: #ffffff;
-  text-shadow: 2px 2px #dc7a91;
-  margin: 1rem;
+  color: #240915;
+  text-shadow: 2px 2px #fddb9e;
+  margin: 1.5rem;
+  margin-left: 0;
 }
 
 #menuknap {
   display: inline-block;
-  color: white;
+  color: #240915;
   cursor: pointer;
   font-size: 2.5rem;
   padding-left: 0.2em;
