--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
-h1 {
+html body {
+  padding: 0;
+
+  margin: 0;
+  hyphens: auto;
+}
+
+img {
+  width: 100%;
+  display: block;
+  height: auto;
+}
+
+#forside h1 {
   font-family: "Bebas Neue", cursive;
   font-size: 5rem;
   color: #ffffff;
@@ -20,13 +33,14 @@ h3 {
 
 p {
   font-family: "Barlow Condensed", sans-serif;
-  font-size: 16px;
-  color: #584fa2;
+  font-size: 1.3rem;
+  color: #240915;
 }
+/* menu */
 
 header {
   position: static;
-  background-color: #febb8e;
+  background-color: #ffe0cb;
   margin: 0;
 }
 
@@ -45,10 +59,10 @@ li {
 
 a {
   font-family: "Montserrat", sans-serif;
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   text-decoration: none;
   color: #240915;
-  margin: 1.5rem;
+  margin: 0.5rem;
   margin-left: 0;
 }
 
@@ -65,11 +79,12 @@ a {
   transform: translateX(-100%);
 }
 
+/*forside*/
+
 #forside section {
   background-image: url(billeder/splashart.webp);
   width: 100%;
   height: 100vh;
-
   display: grid;
   background-size: cover;
   background-position: 20% 10%;
@@ -78,6 +93,64 @@ a {
 footer {
   margin-top: -6em;
   padding: 1em;
+}
+
+/* om mig */
+
+#om_mig h1 {
+  font-family: "Bebas Neue", cursive;
+  font-size: 5rem;
+  color: #240915;
+  margin: 0.5em;
+}
+
+/* #om_mig {
+  margin: 5em;
+  margin-bottom: 5em;
+} */
+
+.om_img {
+  border: 0.2em solid #240915;
+  margin: 3em;
+}
+
+.om_img2 {
+  margin-top: 7em;
+}
+
+.tekst_1 p {
+  position: relative;
+  z-index: 2;
+  margin: 1em;
+  text-align: center;
+  padding-top: 1em;
+}
+
+.tekst_2 p {
+  position: relative;
+  z-index: 2;
+  margin: 1em;
+  margin-bottom: 2em;
+  text-align: center;
+  padding-top: 1em;
+}
+
+.box_1 {
+  z-index: 1;
+  position: absolute;
+  background-color: #fed2ce;
+  height: 15vh;
+  width: 100vw;
+  padding-top: 5vh;
+}
+
+.box_2 {
+  z-index: 1;
+  position: absolute;
+  background-color: #fed2ce;
+  height: 15vh;
+  width: 100vw;
+  padding-top: 5vh;
 }
 
 @media (min-width: 780px) {
