--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html body {
   padding: 0;
-
   margin: 0;
   hyphens: auto;
 }
@@ -247,11 +246,13 @@ footer {
   .box_1 {
     margin-top: 8em;
     height: 35vh;
+    width: 80vw;
   }
 
   .box_2 {
     margin-top: 8em;
     height: 35vh;
+    width: 80vw;
   }
   /* #om_mig p {
     font-size: 2rem;
@@ -262,5 +263,12 @@ footer {
   }
   .tekst_2 {
     margin-top: 12em;
+  }
+
+  #om_mig {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
   }
 }
