--- a/style.css
+++ b/style.css
@@ -145,6 +145,24 @@ footer {
   width: 100vw;
   padding-top: 5vh;
 }
+
+#portfolio #first_section {
+  background-image: url(billeder/splashbillede2.webp);
+  width: 100%;
+  height: 45vh;
+  background-size: cover;
+  background-position: 50% 10%;
+  display: grid;
+}
+
+#portfolio h1 {
+  font-family: "Bebas Neue", cursive;
+  font-size: 5rem;
+  color: #ffffff;
+  margin: 2rem;
+  text-shadow: 5px 4px #240915;
+}
+
 @media (min-width: 500px) {
   .tekst_1 p {
     padding-top: 1em;
