--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ img {
 
 h2 {
   font-family: "Odibee Sans", cursive;
-  font-size: 39px;
-  color: #584fa2;
+  font-size: 3rem;
+  color: #240915;
 }
 
 h3 {
@@ -60,9 +60,14 @@ a {
   font-family: "Montserrat", sans-serif;
   font-size: 1.3rem;
   text-decoration: none;
+  font-weight: 200;
   color: #240915;
   margin: 0.5rem;
   margin-left: 0;
+}
+
+a:hover {
+  color: #ffffff;
 }
 
 #menuknap {
@@ -149,7 +154,7 @@ footer {
 #portfolio #first_section {
   background-image: url(billeder/splashbillede2.webp);
   width: 100%;
-  height: 45vh;
+  height: 30vh;
   background-size: cover;
   background-position: 50% 10%;
   display: grid;
@@ -161,6 +166,44 @@ footer {
   color: #ffffff;
   margin: 2rem;
   text-shadow: 5px 4px #240915;
+}
+
+#portfolio h3 {
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-size: 2rem;
+  color: #240915;
+}
+
+#portfolio a {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 1.3rem;
+  color: #240915;
+}
+
+#portfolio a:hover {
+  color: #ffffff;
+}
+
+#second_section {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+}
+
+.tekst_col {
+  background-color: #fed2ce;
+  text-align: center;
+  padding: 1.5vw;
+}
+.img_col {
+  width: 100%;
+}
+
+.img_col img {
+  border: 0.2em solid #240915;
+  background-color: #ffffff;
+  padding: 0.5em;
 }
 
 @media (min-width: 500px) {
@@ -249,13 +292,6 @@ footer {
 }
 
 @media (min-width: 1300px) {
-  /* #om_mig h1 {
-    font-size: 7rem;
-    margin: 0;
-    margin-top: 0.6em;
-    margin-left: 0.5em;
-  } */
-
   .box_1 {
     margin-top: 8em;
     height: 30vh;
@@ -267,9 +303,6 @@ footer {
     height: 35vh;
     width: 70vw;
   }
-  /* #om_mig p {
-    font-size: 2rem;
-  } */
 
   .tekst_1 {
     margin-top: 12em;
