--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ p {
   font-size: 1.3rem;
   color: #240915;
 }
+
+hr {
+  border: 0;
+  border-top: 2px solid #240915;
+}
 /* menu */
 
 header {
@@ -177,19 +182,37 @@ footer {
   font-family: "Yanone Kaffeesatz", sans-serif;
   font-size: 1.8rem;
   color: #240915;
+  margin-bottom: 0.5em;
+  margin-left: 0.5em;
 }
 
 #portfolio a {
   font-family: "Barlow Condensed", sans-serif;
   font-size: 1.3rem;
   color: #240915;
+  padding: 0.5em;
 }
 
 #portfolio a:hover {
   color: #ffffff;
 }
 
-#second_section,
+.link {
+  display: inline-flex;
+  background-color: #fed2ce;
+  border: 0.2em solid #240915;
+  margin-top: -2em;
+  margin-left: 1em;
+}
+
+#links {
+  margin-top: -10em;
+  display: flex;
+  justify-content: start;
+  margin-left: -1em;
+}
+
+#portfolio #second_section,
 #third_section,
 #fourth_section,
 #fifth_section {
@@ -253,6 +276,10 @@ footer {
     padding: 1em;
   }
   /* om mig */
+  #om_mig h1 {
+    font-size: 7rem;
+    margin-bottom: 0;
+  }
 
   #om_mig #first_section {
     display: grid;
@@ -297,6 +324,87 @@ footer {
     width: 100vw;
   }
   /* Portfolio */
+
+  #portfolio #first_section {
+    margin-bottom: 5em;
+    height: 50vh;
+  }
+
+  #portfolio h1 {
+    margin-top: 1em;
+    margin-left: 1em;
+    font-size: 9rem;
+  }
+
+  #portfolio h2 {
+    margin-top: 1.5em;
+  }
+
+  #portfolio h3 {
+    margin-left: 1em;
+  }
+
+  .img_col_1 h4 {
+    margin-left: 1em;
+    margin-bottom: 0.5em;
+  }
+
+  .col {
+    display: grid;
+    grid-template-columns: 3fr 4fr;
+  }
+
+  .col_2 {
+    display: grid;
+    grid-template-columns: 4fr 3fr;
+  }
+
+  .col_3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .col_4 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .col_4 .tekst_col_2 {
+    display: flex;
+    align-items: center;
+    background-color: #fed2ce;
+    text-align: center;
+    padding: 1.5vw;
+    margin-top: 10vw;
+    margin-bottom: -10vw;
+  }
+
+  .tekst_col {
+    display: flex;
+    align-items: center;
+    padding-bottom: 5em;
+  }
+
+  .img_col_2 {
+    margin-top: -3em;
+  }
+
+  .img_col_3 {
+    margin-top: -6.4em;
+  }
+
+  .img_col_4 {
+    margin-top: -3em;
+  }
+
+  .img_col_5 {
+    margin-top: 2em;
+  }
+  .img_col_6 {
+    grid-column: 2/3;
+    grid-row: 1/3;
+  }
 }
 
 @media (min-width: 1300px) {
@@ -323,6 +431,16 @@ footer {
   }
 
   #om_mig {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+  }
+
+  #portfolio #second_section,
+  #third_section,
+  #fourth_section,
+  #fifth_section {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
