--- a/style.css
+++ b/style.css
@@ -186,11 +186,18 @@ footer {
   margin-left: 0.5em;
 }
 
-#portfolio a {
+.link a {
   font-family: "Barlow Condensed", sans-serif;
   font-size: 1.3rem;
   color: #240915;
   padding: 0.5em;
+}
+
+.tekst_col a {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 1.3rem;
+  color: #240915;
+  padding: 0;
 }
 
 #portfolio a:hover {
@@ -209,7 +216,7 @@ footer {
   margin-top: -10em;
   display: flex;
   justify-content: start;
-  margin-left: -1em;
+  margin-left: -0.5em;
 }
 
 #portfolio #second_section,
@@ -226,8 +233,7 @@ footer {
   background-color: #fed2ce;
   text-align: center;
   padding: 1.5vw;
-  margin-top: 2vw;
-  margin-bottom: 2vw;
+  margin-top: 1.6vw;
 }
 
 .img_style {
@@ -370,7 +376,7 @@ footer {
     grid-template-rows: 1fr 1fr;
   }
 
-  .col_4 .tekst_col_2 {
+  .col_4 .tekst_col_3 {
     display: flex;
     align-items: center;
     background-color: #fed2ce;
@@ -384,6 +390,16 @@ footer {
     display: flex;
     align-items: center;
     padding-bottom: 5em;
+  }
+
+  .tekst_col_2 {
+    display: flex;
+    align-items: center;
+    padding-bottom: 5em;
+    background-color: #fed2ce;
+    text-align: center;
+    padding: 1.5vw;
+    margin-top: 0;
   }
 
   .img_col_2 {
