--- a/style.css
+++ b/style.css
@@ -98,8 +98,8 @@ a:hover {
 }
 
 footer {
-  margin-top: -6em;
   padding: 1em;
+  text-align: center;
 }
 
 /* om mig */
@@ -207,15 +207,16 @@ footer {
   display: inline-flex;
   background-color: #fed2ce;
   border: 0.2em solid #240915;
-  margin-top: -2em;
-  margin-left: 1em;
 }
 
 #links {
-  margin-top: -10em;
-  display: flex;
-  justify-content: start;
-  margin-left: -0.5em;
+  display: grid;
+  justify-content: center;
+}
+
+#links .link {
+  padding: 0.5em;
+  margin: 1em;
 }
 
 #portfolio #second_section,
@@ -407,6 +408,24 @@ footer {
   .img_col_6 {
     grid-column: 2/3;
     grid-row: 1/3;
+  }
+
+  #links {
+    display: grid;
+    justify-content: end;
+    grid-column: 1/2;
+    margin-top: 10em;
+    margin-bottom: 5em;
+    text-align: center;
+  }
+
+  #links .link {
+    padding: 0.5em;
+    margin: 1em;
+  }
+  footer {
+    margin-left: 17em;
+    text-align: left;
   }
 }
 
