--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ img {
 }
 
 h2 {
-  font-family: "Teko", sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 3rem;
   color: #240915;
 }
@@ -181,7 +181,7 @@ footer {
 
 #portfolio h3 {
   font-family: "Teko", sans-serif;
-  font-size: 2.4rem;
+  font-size: 2.6rem;
   color: #240915;
 }
 
